Move to using deps.edn and running in vs code with Calva

--- a/.gitignore
+++ b/.gitignore
@@ -204,3 +204,11 @@ sftp-config.json
 # Vagrant
 .vagrant/
 ubuntu-xenial-16.04-cloudimg-console.log
+
+#vs code
+.calva/
+.clj-kondo/
+.cpcache/
+.lsp/
+.portal/
+.taget/
